--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -6,7 +6,8 @@ toc_max_heading_level: 3
 ---
 
 import TOCInline from "@theme/TOCInline";
-import { MainTitle, DocumentTitle } from "@site/src/components";
+import { MainTitle } from "@site/src/components";
+import { DocumentTitle } from "@site/src/hooks";
 
 <DocumentTitle title="TypeScript Style Guide" />
 <MainTitle>TypeScript Style Guide</MainTitle>
