--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -7,9 +7,9 @@ toc_max_heading_level: 3
 
 import TOCInline from "@theme/TOCInline";
 import { MainTitle } from "@site/src/components";
-import { DocumentTitle } from "@site/src/hooks";
+import { UseDocumentTitle } from "@site/src/hooks";
 
-<DocumentTitle title="TypeScript Style Guide" />
+<UseDocumentTitle>TypeScript Style Guide</UseDocumentTitle>
 <MainTitle>TypeScript Style Guide</MainTitle>
 
 ## Introduction
