--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -5,8 +5,7 @@ toc_min_heading_level: 2
 toc_max_heading_level: 3
 ---
 
-import TOCInline from "@theme/TOCInline";
-import { MainTitle } from "@site/src/components";
+import { MainTitle, TableOfContents } from "@site/src/components";
 import { UseDocumentTitle } from "@site/src/hooks";
 
 <UseDocumentTitle>TypeScript Style Guide</UseDocumentTitle>
@@ -18,7 +17,7 @@ TypeScript Style Guide provides a concise set of conventions (sometimes arbitrar
 
 ## Table of Contents
 
-<TOCInline toc={toc} minHeadingLevel={2} maxHeadingLevel={3} />
+<TableOfContents toc={toc} />
 
 ## About Guide
 
