--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -17,7 +17,7 @@ TypeScript Style Guide provides a concise set of conventions (sometimes arbitrar
 
 ## Table of Contents
 
-<TableOfContents toc={toc} />
+<TableOfContents items={toc} />
 
 ## About Guide
 
