--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -326,16 +326,16 @@ While it's often hard to find the best name, try optimize code for consistency a
 
 #### Variables
 
-- #### Locals
+- **Locals**  
   Camel case  
   `products`, `productsFiltered`
-- #### Booleans
+- **Booleans**  
   Prefixed with `is`, `has` etc.  
   `isDisabled`, `hasProduct`
-- #### Constants
+- **Constants**  
   Capitalized  
   `PRODUCT_ID`
-- #### Object constants
+- **Object constants**
 
   Singular, capitalized with const assertion and optionally satisfies type (if there is one).
 
