--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -454,9 +454,9 @@ const filteredUsers = frontendFiltering(selectedUsernames);
 const frequencies = signal.FFT();
 ```
 
-## React Components
+## React
 
-### Functions
+### Components
 
 Since React components and hooks are also functions, [respective function conventions](#functions) applies.
 
@@ -518,7 +518,7 @@ type FooProps = Readonly<{
 export const Foo = ({ name, score }: FooProps) => {...
 ```
 
-### Required & Optional Props
+### Props - Required & Optional
 
 **Strive to have majority of props required and use optional sparingly.**
 
