--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -41,7 +41,7 @@ Style Guide assumes using, but is not limited to:
 - **Code is organized and grouped by feature.** Collocate code as close as possible to where it's relevant. [&#11107;](#code-collocation)
 - Strive for data immutability. [&#11107;](#data-immutability)
 - Strive for functions to be pure, stateless and have single responsibility. [&#11107;](#functions)
-- Majority of function arguments should be required (use optional sparingly). [&#11107;](#required--optional-props)
+- Majority of function arguments should be required (use optional sparingly). [&#11107;](#required--optional-args)
 - Embrace const assertions. [&#11107;](#const-assertion)
 - Strong emphasis to keep naming conventions consistent and readable. [&#11107;](#naming-conventions)
 - Use named exports. [&#11107;](#named-export)
@@ -59,65 +59,77 @@ As an exception mutations should be used sparingly in cases where truly necessar
 
 Function conventions should be followed as much as possible (some of the derives from functional programming basic concepts):
 
-- Function should have single responsibility.
-- Function should be stateless where the same input arguments return same value every single time.
-- Function should accept at least one argument and return data.
-- Function should not have side effects, but be pure. It's implementation should not modify or access variable value outside its local environment (global state, fetching etc.).
-- To keep function readable and easily extensible for the future (adding/removing args), strive to have single object as the function arg, instead of multiple args.  
-  As exception this not applies when having only one primitive single arg (e.g. simple functions isNumber(value), implementing currying etc.).
+### General
 
-  ```ts
-  // ❌ Avoid having multiple arguments
-  transformUserInput("client", false, 60, 120, null, true, 2000);
+Function:
 
-  // ✅ Use options object as argument
-  transformUserInput({
-    method: "client",
-    isValidated: false,
-    minLines: 60,
-    maxLines: 120,
-    defaultInput: null,
-    shouldLog: true,
-    timeout: 2000,
-  });
-  ```
+- should have single responsibility.
+- should be stateless where the same input arguments return same value every single time.
+- should accept at least one argument and return data.
+- should not have side effects, but be pure. It's implementation should not modify or access variable value outside its local environment (global state, fetching etc.).
 
-- Strive to have majority of args required and use optional sparingly.  
-   If function becomes to complex it probably should be broken into smaller pieces.  
-   An exaggerated example where implementing 10 functions with 5 required args each, is better then implementing one "can do it all" function that accepts 50 optional args.
-- When applicable use **discriminated union type** to eliminate optional args, which will decrease complexity on function API and only necessary/required args will be passed depending on its use case.
+### Single Object Arg
 
-  ```ts
-  // ❌ Avoid optional args as they increase complexity of function API
-  type StatusParams = {
-    data?: Products;
-    title?: string;
-    time?: number;
-    error?: string;
-  };
+To keep function readable and easily extensible for the future (adding/removing args), strive to have single object as the function arg, instead of multiple args.  
+ As exception this not applies when having only one primitive single arg (e.g. simple functions isNumber(value), implementing currying etc.).
 
-  // ✅ Strive to have majority of args required, if that's not possible,
-  // use discriminated union for clear intent on function usage
-  type StatusParamsSuccess = {
-    status: 'success';
-    data: Products;
-    title: string;
-  };
+```ts
+// ❌ Avoid having multiple arguments
+transformUserInput("client", false, 60, 120, null, true, 2000);
 
-  type StatusParamsLoading = {
-    status: 'loading';
-    time: number;
-  };
+// ✅ Use options object as argument
+transformUserInput({
+  method: "client",
+  isValidated: false,
+  minLines: 60,
+  maxLines: 120,
+  defaultInput: null,
+  shouldLog: true,
+  timeout: 2000,
+});
+```
 
-  type StatusParamsError = {
-    status: 'error';
-    error: string;
-  };
+### Required & Optional Args
 
-  type StatusParams = StatusSuccess | StatusLoading | StatusError;
+Strive to have majority of args required and use optional sparingly.  
+ If function becomes to complex it probably should be broken into smaller pieces.  
+ An exaggerated example where implementing 10 functions with 5 required args each, is better then implementing one "can do it all" function that accepts 50 optional args.
 
-  export const parseStatus = (params: StatusParams) => {...
-  ```
+### Args as Discriminated Union
+
+When applicable use **discriminated union type** to eliminate optional args, which will decrease complexity on function API and only necessary/required args will be passed depending on its use case.
+
+```ts
+// ❌ Avoid optional args as they increase complexity of function API
+type StatusParams = {
+  data?: Products;
+  title?: string;
+  time?: number;
+  error?: string;
+};
+
+// ✅ Strive to have majority of args required, if that's not possible,
+// use discriminated union for clear intent on function usage
+type StatusParamsSuccess = {
+  status: 'success';
+  data: Products;
+  title: string;
+};
+
+type StatusParamsLoading = {
+  status: 'loading';
+  time: number;
+};
+
+type StatusParamsError = {
+  status: 'error';
+  error: string;
+};
+
+type StatusParams = StatusSuccess | StatusLoading | StatusError;
+
+export const parseStatus = (params: StatusParams) => {...
+```
 
 ## Variables
 
