--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -691,7 +691,7 @@ apps/
 - `common` folder is responsible for implementations that are truly used across application. Since its a "global folder" it should be used sparingly.  
   If same component e.g. `common/components/ProductTitle` starts being used on more the one page, it shall be moved to common folder.
 
-In case Nextjs is being used as React framework, `pages` folder serves only as a router, where its responsibility is to define routes (no business logic implementation). Same approach applies for other frameworks with file-system based router.
+In case file-system based router (e.g. Nextjs) is being used as frontend framework, `pages` folder serves only as a router, where its responsibility is to define routes (no business logic implementation).
 
 ## Tests - Unit & Integration
 
