--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -734,8 +734,8 @@ Automated test comes with benefits that helps us write better code and makes it 
 - Strive to write tests in a way your app/package is used by a user, meaning test business logic.  
   E.g. given some user input, they receive the expected output for a process.
 - All tests must be setup and implemented to run as standalone in isolation, where they don't depend on other tests order of execution.
-- Make tests resilient to changes, query HTML elements based on attributes that are unlikely to change.  
-  Order of priority must be followed as specified in [Testing Library](https://testing-library.com/docs/queries/about/#priority) - [role](https://testing-library.com/docs/queries/byrole), [label](https://testing-library.com/docs/queries/bylabeltext), [placeholder](https://testing-library.com/docs/queries/byplaceholdertext), [text contents](https://testing-library.com/docs/queries/bytext), [display value](https://testing-library.com/docs/queries/bydisplayvalue), [alt text](https://testing-library.com/docs/queries/byalttext), [title](https://testing-library.com/docs/queries/bytitle), [test ID](https://testing-library.com/docs/queries/bytestid).
+- Tests should be resilient to changes.  
+  Query HTML elements based on attributes that are unlikely to change. Order of priority must be followed as specified in [Testing Library](https://testing-library.com/docs/queries/about/#priority) - [role](https://testing-library.com/docs/queries/byrole), [label](https://testing-library.com/docs/queries/bylabeltext), [placeholder](https://testing-library.com/docs/queries/byplaceholdertext), [text contents](https://testing-library.com/docs/queries/bytext), [display value](https://testing-library.com/docs/queries/bydisplayvalue), [alt text](https://testing-library.com/docs/queries/byalttext), [title](https://testing-library.com/docs/queries/bytitle), [test ID](https://testing-library.com/docs/queries/bytestid).
 
 ❌ Don't:
 
