--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -5,7 +5,7 @@ toc_min_heading_level: 2
 toc_max_heading_level: 3
 ---
 
-import { MainTitle, TableOfContents } from '@site/src/components';
+import { Chip, MainTitle, TableOfContents } from '@site/src/components';
 import { UseDocumentTitle } from '@site/src/hooks';
 
 <UseDocumentTitle>TypeScript Style Guide</UseDocumentTitle>
@@ -203,6 +203,11 @@ Use `undefined` assignment when e.g. trying to exclude fields in: forms, request
 TypeScript offers two options for type definitions - `type` and `interface`. As they come with some functional differences, we try to limit syntax difference and pick one for consistency.
 
 All types must be defined with `type` alias ([eslint rule](https://typescript-eslint.io/rules/consistent-type-definitions/#type)).
+
+<Chip>
+  Consider using interfaces if developing package that can be further extended, team is more comfortable working with
+  interfaces etc. Disable lint rule in case of exceptions as type unions (type Status = 'loading' | 'error') etc.
+</Chip>
 
 ```ts
 // ❌ Avoid interface definitions
