--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -476,10 +476,25 @@ const frequencies = signal.FFT();
 
 ### Imports
 
-Import paths can be relative, starting with `./` or `../`, or they can be absolute `common/components`.
+Import paths can be relative, starting with `./` or `../`, or they can be absolute `@common/utils`.
 
-Relative imports `./myCustomHook` must be used when importing files within the same feature, as it allows moving feature around the codebase without introducing changes in these imports.  
-Absolute imports `common/components` must be used in all other cases.
+To make import statements more readable and easier to understand:
+
+- Relative imports `./sortItems` must be used when importing files within the same feature, that are 'close' to each other, which also allows moving feature around the codebase without introducing changes in these imports.
+- Absolute imports `@common/utils` must be used in all other cases.
+- All imports must be auto sorted by tooling e.g. [prettier-plugin-sort-imports](https://github.com/trivago/prettier-plugin-sort-imports), [eslint-plugin-import](https://github.com/import-js/eslint-plugin-import/blob/main/docs/rules/order.md)...
+
+```ts
+// ❌ Avoid
+import { bar, foo } from '../../../../../../distant-folder';
+
+// ✅ Use
+import { locationApi } from '@api/locationApi';
+
+import { foo } from '../../foo';
+import { bar } from '../bar';
+import { baz } from './baz';
+```
 
 ### Project Structure
 
