--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -253,10 +253,10 @@ const y: ReadonlyArray<string> = ['a', 'b'];
 ### Type Annotation & Inference
 
 <p>
-  As rule of a thumb, use type annotation if it narrows the type.
+  As rule of a thumb, use type annotation when it helps narrow a type.
   <Chip>
-    Just because you don't need to add types, doesn't mean you shouldn't. Explicit type annotations increase code
-    readability and intent, but still in some cases inference has its place.
+    Just because you don't need to add types, doesn't mean you shouldn't. In some cases explicit type annotations can
+    increase code readability and intent.
   </Chip>
 </p>
 
