--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -196,8 +196,8 @@ type ColorValue = Color[ColorKey]; // Type "#B33930" | "#113A5C" | "#9C0E7D"
 In TypeScript types `null` and `undefined` many times can be used interchangeably.  
 For consistency strive to:
 
-- use `null` to explicitly state it has no value - assignment, return function type etc.
-- use `undefined` assignment when trying to exclude fields. E.g. in form fields, request payload, querying database ([Prisma differentiation](https://www.prisma.io/docs/concepts/components/prisma-client/null-and-undefined)) etc.
+- Use `null` to explicitly state it has no value - assignment, return function type etc.
+- Use `undefined` assignment when trying to exclude fields. E.g. in form fields, request payload, querying database ([Prisma differentiation](https://www.prisma.io/docs/concepts/components/prisma-client/null-and-undefined))...
 
 ## Types
 
