--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -253,7 +253,7 @@ const x: Array<string> = ['a', 'b'];
 const y: ReadonlyArray<string> = ['a', 'b'];
 ```
 
-### Type Annotation & InferenceE
+### Type Annotation & Inference
 
 <p>
   As rule of a thumb, use type annotation when it helps narrow a type.
