--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -253,12 +253,12 @@ const x: Array<string> = ['a', 'b'];
 const y: ReadonlyArray<string> = ['a', 'b'];
 ```
 
-### Type Annotation & Inference
+### Type Inference
 
 <p>
-  As rule of a thumb, use type annotation when it helps narrow a type.
+  As rule of a thumb, use explicitly declare a type when it helps narrow a type.
   <Chip>
-    Just because you don't need to add types, doesn't mean you shouldn't. In some cases explicit type annotations can
+    Just because you don't need to add types, doesn't mean you shouldn't. In some cases explicit type declaration can
     increase code readability and intent.
   </Chip>
 </p>
