--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -256,7 +256,7 @@ const y: ReadonlyArray<string> = ['a', 'b'];
 ### Type Inference
 
 <p>
-  As rule of a thumb, use explicitly declare a type when it helps narrow a type.
+  As rule of thumb, explicitly declare a type when it helps narrow it.
   <Chip>
     Just because you don't need to add types, doesn't mean you shouldn't. In some cases explicit type declaration can
     increase code readability and intent.
