--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -13,7 +13,7 @@ import { UseDocumentTitle } from '@site/src/hooks';
 
 ## Introduction
 
-TypeScript Style Guide provides a concise set of conventions (sometimes arbitrary) and best practices used to create consistent, maintainable code.
+TypeScript Style Guide provides a concise set of conventions and best practices used to create consistent, maintainable code.
 
 ## Table of Contents
 
@@ -21,7 +21,7 @@ TypeScript Style Guide provides a concise set of conventions (sometimes arbitrar
 
 ## About Guide
 
-As any code style guide is opinionated, this is no different as it tries to set conventions that govern our code.
+As any code style guide is opinionated, this is no different as it tries to set conventions (sometimes arbitrary) that govern our code.
 
 Since "consistency is the key", style guide strives to enforce majority of the rules by using automated tooling as ESLint, TypeScript, Prettier, etc. Still certain design and architectural decisions must be followed which are described with conventions bellow.
 
