--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: TypeScript Style Guide
-description: TypeScript Style Guide provides a concise set of conventions (sometimes arbitrary) and best practices used to create consistent, maintainable code.
+description: TypeScript Style Guide provides a concise set of conventions and best practices used to create consistent, maintainable code.
 toc_min_heading_level: 2
 toc_max_heading_level: 3
 ---
