--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -15,6 +15,8 @@ import { UseDocumentTitle } from '@site/src/hooks';
 
 TypeScript Style Guide provides a concise set of conventions and best practices used to create consistent, maintainable code.
 
+As projects grow in size and complexity, maintaining code quality and ensuring consistent practices becomes increasingly challenging. Defining and following a standard way to write TypeScript applications brings consistent codebase and faster development cycles.
+
 ## Table of Contents
 
 <TableOfContents items={toc} />
