--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -768,7 +768,7 @@ Automated test comes with benefits that helps us write better code and makes it 
 
 ✅ Do:
 
-- Implement test to be short, simple, and pleasant to work with. A test intent should be immediately visible.
+- Implement test to be short, simple, and pleasant to work with. Intent of a test should be immediately visible.
 - Strive to write tests in a way your app/package is used by a user, meaning test business logic.  
   E.g. given some user input, they receive the expected output for a process.
 - All tests must be setup and implemented to run as standalone in isolation, where they don't depend on other tests order of execution.
