--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -243,7 +243,7 @@ export interface ProcessEnv {
 
 ### Array Types
 
-Array types must be defined with `generic` syntax ([eslint rule](https://typescript-eslint.io/rules/array-type/#generic)).
+Array types must be defined with generic syntax ([eslint rule](https://typescript-eslint.io/rules/array-type/#generic)).
 
 ```ts
 // ❌ Avoid
