--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -40,13 +40,14 @@ Style Guide assumes using, but is not limited to:
 
 ## TLDR
 
-- **Code is organized and grouped by feature.** Collocate code as close as possible to where it's relevant. [&#11107;](#code-collocation)
 - Strive for data immutability. [&#11107;](#data-immutability)
 - Strive for functions to be pure, stateless and have single responsibility. [&#11107;](#functions)
 - Majority of function arguments should be required (use optional sparingly). [&#11107;](#required--optional-args)
 - Embrace const assertions. [&#11107;](#const-assertion)
+- Avoid type assertions. [&#11107;](#type--non-nullability-assertions)
 - Strong emphasis to keep naming conventions consistent and readable. [&#11107;](#naming-conventions)
 - Use named exports. [&#11107;](#named-export)
+- Code is organized and grouped by feature. Collocate code as close as possible to where it's relevant. [&#11107;](#code-collocation)
 - Use of server-state library is encouraged ([react-query](https://github.com/tanstack/query), [apollo client](https://github.com/apollographql/apollo-client)...). [&#11107;](#store--pass-data)
 - Use of client-state library for global state is discouraged. [&#11107;](#store--pass-data)
 - UI components must only show derived state and send events, nothing more (no business logic). [&#11107;](#component-types)
