--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -324,7 +324,7 @@ Type assertions `user as User` and non-nullability assertions `user!.name` are u
  They can only be used as last resort exceptions (e.g. third party library types mismatch etc.) with strong rational why being introduced into codebase.
 
 ```ts
-// ❌ Avoid type & non-nullability Assertions
+// ❌ Avoid type & non-nullability assertions
 type User = { id: string; username: string; avatar: string | null };
 const user = { name: 'Nika' } as User;
 renderUserAvatar(user!.avatar);
