--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -60,7 +60,7 @@ As an exception mutations should be used sparingly in cases where truly necessar
 
 ## Functions
 
-Function conventions should be followed as much as possible (some of the derives from functional programming basic concepts):
+Function conventions should be followed as much as possible (some of them derives from functional programming basic concepts):
 
 ### General
 
